<resources>
    <string name="app_name">Scruge</string>
    <string name="action_done_cap">DONE</string>
    <string name="title_about_the_team">About the team</string>
    <string name="do_reply">Reply</string>
    <string name="title_place_your_vote">Place your vote</string>
    <string name="hint_wallet_password">Wallet password</string>
    <string name="title_vote_ends_in">Vote ends in:</string>
    <string name="title_rationale">Rationale:</string>
    <string name="timer_days">Days</string>
    <string name="timer_hours">Hours</string>
    <string name="timer_minutes">Minutes</string>
    <string name="title_documents">Documents</string>
    <string name="title_token_economies">Token economies</string>
    <string name="label_total_token_supply">Total token supply</string>
    <string name="label_token_percent_for_public_sale">Token percent for public sale</string>
    <string name="label_initial_release_after_funding">Initial release</string>
    <string name="label_annual_inflation_rate">Annual inflation rate</string>
    <string name="do_see_all_updates">See all updates</string>
    <string name="title_vote_results">Results</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_ok">OK</string>
    <string name="hint_write_a_comment">Write a comment</string>
    <string name="do_send_cap">SEND</string>
    <string name="do_send">Send</string>
    <string name="label_i_agree_terms">I agree to the terms of the offer and take all the risks on myself</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="do_forgot_password">Forgot password?</string>
    <string name="label_not_a_member_yet">Not a member yet?</string>
    <string name="do_sign_up">Sign Up</string>
    <string name="do_privacy_policy">Privacy policy</string>
    <string name="title_about_me">About me</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_about_you">About you</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="do_log_in">Log In</string>
    <string name="do_edit_profile">Edit Profile</string>
    <string name="do_sign_out">Sign Out</string>
    <string name="hint_stake_cpu">Stake CPU</string>
    <string name="eos">EOS</string>
    <string name="hint_stake_net">Stake NET</string>
    <string name="hint_transfer_receiver">Receiver</string>
    <string name="hint_transfer_amount">Amount</string>
    <string name="hint_transfer_memo">Memo</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_wallet_data">Wallet Data</string>
    <string name="title_resources">Resources</string>
    <string name="title_exchange">Exchange</string>
    <string name="hint_eos_account_name">Account name (12 symbols)</string>
    <string name="hint_new_wallet_password">New wallet password</string>
    <string name="hint_confirm_wallet_password">Confirm wallet password</string>
    <string name="do_generate_new_key">Generate new key</string>
    <string name="label_already_have_an_eos_account">Already have an EOS account?</string>
    <string name="do_import_your_key">Import your key</string>
    <string name="hint_private_key">Private key</string>
    <string name="label_no_eos_account">Don\'t have an EOS account?</string>
    <string name="do_create_account">Create Account</string>
    <string name="label_no_eos_accounts_for_key">The key you imported does not have access to any EOS accounts. We can create a free account for you.</string>
    <string name="label_export_this_key">Want to export this key?</string>
    <string name="do_see_wallet_data">See wallet data</string>
    <string name="label_import_different_key">Want to import different key?</string>
    <string name="do_remove_key_and_start_over">Remove key and start over</string>
    <string name="label_protected_by_privacy_policy">All sensitive information is protected and follows the privacy policy</string>
    <string name="label_wallet_start_text">Add your existing EOS blockchain account or create a new one to invest in projects!</string>
    <string name="do_try_again">Try again</string>
    <string name="title_public_key">Public key</string>
    <string name="title_private_key">Private key</string>
    <string name="title_eos_cpu">CPU</string>
    <string name="title_eos_net">NET</string>
    <string name="title_eos_ram">RAM</string>
    <string name="do_buy_eos_ram">Buy %1$s bytes of RAM</string>
    <string name="do_stake_resources">MANAGE RESOURCES</string>
    <string name="do_unstake_resources">UNSTAKE RESOURCES</string>
    <string name="do_switch_eos_account">Switch account</string>
    <string name="do_delete_wallet">Delete Wallet</string>
    <string name="error_auth_incorrectEmailLength">Email should be longer than 5 and shorter than 254 symbols</string>
    <string name="error_auth_incorrectPasswordLength">Password should be longer than 5 and shorter than 50 symbols</string>
    <string name="error_auth_notAuthorized">Authentication required. Please, sign in with your Scruge account</string>
    <string name="error_auth_invalidEmail">Incorrectly formatted email</string>
    <string name="error_auth_accountBlocked">This account was blocked</string>
    <string name="error_auth_accountExists">User already exists</string>
    <string name="error_auth_incorrectCredentials">Incorrect credentials</string>
    <string name="error_auth_denied">Access is restricted</string>
    <string name="error_network_connectionProblem">Unable to connect to the server</string>
    <string name="error_network_unknown">Unknown network error</string>
    <string name="error_backend_notImplemented">Not implemented</string>
    <string name="error_backend_invalidResourceId">Malformed request</string>
    <string name="error_backend_resourceNotFound">Nothing was found for this request</string>
    <string name="error_backend_parsingError">Unexpected server response</string>
    <string name="error_backend_unknown">Unexpected server error</string>
    <string name="error_backend_emailSendError">Could not send you email</string>
    <string name="error_backend_paramsConflict">Parameters conflict with each other</string>
    <string name="error_backend_replyNotSupported">Replying to this is not allowed</string>
    <string name="error_wallet_incorrectPasscode">Incorrect wallet password</string>
    <string name="error_wallet_noAccounts">No accounts are associated with imported key</string>
    <string name="error_wallet_noKey">You have no keys in your wallet</string>
    <string name="error_wallet_noSelectedAccount">You did not verify any EOS accounts</string>
    <string name="error_wallet_selectedAccountMissing">Your verified account is not accessible with imported private key</string>
    <string name="error_wallet_unknown">Unexpected wallet error</string>
    <string name="error_eos_overdrawnBalance">Overdrawn balance</string>
    <string name="error_eos_unknown">Unknown error</string>
    <string name="error_eos_abiError">Incorrect transaction format</string>
    <string name="error_eos_incorrectName">Incorrect name: it can only contain letters, numbers from 1 to 5 and a dot</string>
    <string name="error_eos_incorrectToken">Incorrect token input</string>
    <string name="error_eos_actionError">Server was unable to complete blockchain transaction, please try again</string>
    <string name="error_eos_notSupported">EOS: Not supported</string>
    <string name="error_eos_eosAccountExists">EOS account with this name already exists</string>
    <string name="error_general_unexpected">Unexpected error</string>
    <string name="error_general_code">Error %1$s</string>
    <string name="label_anonymous">Anonymous</string>
    <string name="label_ms_current">%1$sms / %2$sms</string>
    <string name="label_kb_current">%1$sKB / %2$sKB</string>
    <string name="transaction_sent">Sent</string>
    <string name="transaction_received">Received</string>
    <string name="transaction_transfer">Transfer</string>
    <string name="transaction_invested">Invested</string>
    <string name="transaction_voted">Voted</string>
    <string name="label_voting_to_extend">extend deadline</string>
    <string name="label_voting_to_release_funds">release funds</string>
    <string name="label_voting_participated">Participated in voting to %1$s for campaign %2$s</string>
    <string name="transaction_sent_to_description">%1$s to %2$s</string>
    <string name="transaction_received_from_description">%1$s from %2$s</string>
    <string name="transaction_invested_in_description">%1$s in %2$s</string>
    <string name="label_milestone_funds_release">Releasing next %1$s of funds</string>
    <string name="do_add_your_comment">Add your comment</string>
    <string name="label_voting_to_for">Voting to %1$s for %2$s</string>
    <string name="title_faq">Frequently answered questions</string>
    <string name="title_milestones">Milestones</string>
    <string name="title_current_milestone">Current milestone</string>
    <string name="title_next_milestone">Next milestone</string>
    <string name="title_previous_milestone">Previous milestone</string>
    <string name="title_future_milestone">Future milestone</string>
    <string name="title_last_update">Last update</string>
    <string name="do_vote_for">VOTE FOR</string>
    <string name="do_vote_against">VOTE AGAINST</string>
    <string name="label_vote_extend_description">Voting whether to extend deadlines of the milestone.</string>
    <string name="label_vote_release_description">Voting to accept milestone results and release next portions of funds to the founders of the campaign or to return remaining funds to backers and close the campaign.</string>
    <string name="title_preview">Preview</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_settings">Settings</string>
    <string name="title_export_private_key">Export private key</string>
    <string name="label_export_private_key">Enter your password to unlock wallet</string>
    <string name="do_unlock_wallet">Unlock</string>
    <string name="error_incorrectPassword">Incorrect password</string>
    <string name="alert_private_key_warning">Be careful not to share your private key with anyone!</string>
    <string name="alert_copied_to_clipboard">Copied to clipboard</string>
    <string name="title_activity">Activity</string>
    <string name="error_activity_noActions">No recent actions</string>
    <string name="do_create_profile">create profile</string>
    <string name="do_update_profile">update profile</string>
    <string name="label_sure_to_quit">Are you sure that you want to quit?</string>
    <string name="error_login_enter_email">Enter your email</string>
    <string name="error_login_enter_password">Enter your password</string>
    <string name="title_reset_password">Reset password</string>
    <string name="label_enter_your_email">Enter your email</string>
    <string name="label_reset_password_message">Check your email address for the letter with password recovery instructions</string>
    <string name="label_profile_no_information">No information provided</string>
    <string name="title_featured">Investments</string>
    <string name="title_profile">Profile</string>
    <string name="label_vote_bp_description">Select up to 30 block producers to vote for</string>
    <string name="hint_bp_filter">Filter the list</string>
    <string name="do_label_submit">Provide a link or any other way to review your completed work.</string>
    <string name="hint_proof">Your proof of work</string>
</resources>