<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_featured"
        android:title="@string/title_featured"
        android:icon="@drawable/featured"
        android:orderInCategory="0"
        />

    <item
        android:id="@+id/menu_acivity"
        android:title="@string/title_activity"
        android:icon="@drawable/bell"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/menu_wallet"
        android:title="@string/title_wallet"
        android:icon="@drawable/wallet"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/menu_profile"
        android:title="@string/title_profile"
        android:icon="@drawable/tab_profile"
        android:orderInCategory="3"
        />
</menu>