<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/regular"
                android:text="@string/label_no_eos_accounts_for_key"
                android:textAlignment="center"
                android:textColor="@color/text_regular"
                android:textSize="18sp"/>

            <com.scruge.scruge.view.views.ButtonView
                android:id="@+id/wallet_no_accounts_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/label_export_this_key"
                    android:textAlignment="center"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/wallet_no_accounts_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/medium"
                    android:text="@string/do_see_wallet_data"
                    android:textAllCaps="false"
                    android:textColor="@color/purple"
                    android:textSize="16sp"/>

                <com.scruge.scruge.view.views.WalletData
                    android:id="@+id/wallet_no_accounts_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/label_import_different_key"
                    android:textAlignment="center"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/wallet_no_accounts_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/medium"
                    android:text="@string/do_remove_key_and_start_over"
                    android:textAllCaps="false"
                    android:textColor="@color/purple"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/wallet_no_accounts_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/label_protected_by_privacy_policy"
                    android:textAlignment="center"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>