<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/label_vote_bp_description"
            android:textAlignment="center"
            android:textColor="@color/text_title"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/bp_selected_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/regular"
            android:text="selected 0 / 0"
            android:textAlignment="center"
            android:textColor="@color/text_gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/field_background">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/lock"/>

            <EditText
                android:id="@+id/bp_password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:fontFamily="@font/regular"
                android:hint="@string/hint_wallet_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="45dp"
                android:paddingEnd="0dp"
                android:textColor="@color/text_regular"
                android:textColorHint="@color/text_light"
                android:textSize="14sp"/>

        </RelativeLayout>

        <com.scruge.scruge.view.views.ButtonView
            android:id="@+id/bp_vote_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="2.5dp"
                android:layout_weight="1"
                android:background="@color/field_background">

                <EditText
                    android:id="@+id/bp_filter_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_bp_filter"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/text_regular"
                    android:textColorHint="@color/text_light"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bp_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>